--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -73,10 +73,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "57954c28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\theno\\miniconda3\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\theno\\AppData\\Local\\Temp\\ipykernel_29716\\4164620977.py\", line 138, in save_notebook\n",
+      "    first_note = self.notes[0]\n",
+      "                 ~~~~~~~~~~^^^\n",
+      "IndexError: list index out of range\n"
+     ]
+    }
+   ],
    "source": [
     "# Lab 6: Noah Lee, testing if the commit works!\n",
     "\n",
@@ -200,6 +216,7 @@
     "        tk.Label(note_window, text = f\"Link: {note.note_link}\", width = 30, height = 5, wraplength = 200).pack() # presents note link to user\n",
     "        tk.Label(note_window, text = f\"Tag: {note.note_tag}\", width = 30, height = 5, wraplength = 200).pack() # presents note tags to user\n",
     "        tk.Label(note_window, text = f\"Metadata: {note.note_metadata}\", width = 30, height = 5, wraplength = 200).pack() # presents note metadata to user\n",
+    "        tk.Button(note_window, text = \"Click to edit note\", width = 10, height = 10, command = Snippet.edit_note).pack()\n",
     "\n",
     "    # this method saves the note to your computer as a txt file\n",
     "    def save_notebook(self):\n",
@@ -317,7 +334,26 @@
     "        self.note_tag = note_dict['tag'] # takes tag from note_dict and sets it to the note_tag attribute\n",
     "        self.note_metadata = note_dict['meta'] # takes metadata from note_dict and sets it to the note_metadata attribute\n",
     "        \n",
+    "class Snippet():\n",
+    "    def __init__(self, note_dict, notes, notebook):\n",
+    "        self.note_text = note_dict[\"text\"] # pass note dict\n",
+    "        self.notes = notes # pass through notes variable\n",
+    "        self.notebook = notebook # pass through note book variable \n",
     "        \n",
+    "    def edit_note():\n",
+    "        edit_window = tk.Toplevel()\n",
+    "        edit_window.geometry(\"800x700\")\n",
+    "        edit_window.title(\"Edit Snippet\")\n",
+    "        \n",
+    "        edit_label = tk.Label(edit_window, bg= \"light gray\", text = \"Note text:\")\n",
+    "        edit_label.grid(padx = 10, pady = 10, row = 2, column = 0, sticky = \"e\")\n",
+    "        edit_text = tk.Text(edit_window, height = 10, width = 60)\n",
+    "        edit_text.grid(padx = 10, pady = 10, row = 2 , column = 1)\n",
+    "        edit_text.insert(\"1.0\", \"type to edit note\")\n",
+    "        \n",
+    "\n",
+    "        edit_submit_button = tk.Button(edit_window, bg= \"light gray\", text = \"Submit Edit:\")\n",
+    "        edit_submit_button.grid(padx = 10, pady = 10, row = 5, column = 0, sticky = \"e\")        \n",
     "    \n",
     "# main execution\n",
     "\n",
@@ -338,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "dd1811bf",
    "metadata": {},
    "outputs": [
