Added author, adding shared_notes folder

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -73,26 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "57954c28",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\theno\\miniconda3\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\theno\\AppData\\Local\\Temp\\ipykernel_29716\\4164620977.py\", line 138, in save_notebook\n",
-      "    first_note = self.notes[0]\n",
-      "                 ~~~~~~~~~~^^^\n",
-      "IndexError: list index out of range\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Lab 6: Noah Lee, testing if the commit works!\n",
     "\n",
@@ -216,6 +200,7 @@
     "        tk.Label(note_window, text = f\"Link: {note.note_link}\", width = 30, height = 5, wraplength = 200).pack() # presents note link to user\n",
     "        tk.Label(note_window, text = f\"Tag: {note.note_tag}\", width = 30, height = 5, wraplength = 200).pack() # presents note tags to user\n",
     "        tk.Label(note_window, text = f\"Metadata: {note.note_metadata}\", width = 30, height = 5, wraplength = 200).pack() # presents note metadata to user\n",
+    "        tk.Label(note_window, text = f\"Author: {note.note_author}\", width = 30, height = 5, wraplength = 200).pack() # presents note metadata to user\n",
     "        tk.Button(note_window, text = \"Click to edit note\", width = 10, height = 10, command = Snippet.edit_note).pack()\n",
     "\n",
     "    # this method saves the note to your computer as a txt file\n",
@@ -286,9 +271,15 @@
     "        self.note_link.grid(padx = 10, pady = 10, row = 3, column = 1, sticky = 'w')\n",
     "        self.note_link.insert(0, 'If there is a link with this note enter it here. Else, enter \"None\"') # adds default text (useful during development)\n",
     "        \n",
+    "        self.author_label = tk.Label(self, bg = 'light gray', text = 'Author:')\n",
+    "        self.author_label.grid(padx = 10, pady = 10, row = 5, column = 0, sticky = 'e')\n",
+    "        self.note_author = tk.Entry(self, width = 60) # allows user to enter data\n",
+    "        self.note_author.grid(padx = 10, pady = 10, row = 5, column = 1)\n",
+    "        self.note_author.insert('0', \"Insert Name\") # adds default text (useful during development\n",
+    "        \n",
     "        # create submit button\n",
     "        submit_button = tk.Button(self, text = 'submit', command = self.submit) # submit buttons runs when this button is clicked\n",
-    "        submit_button.grid(padx = 10, pady = 10, row = 5, column = 1, sticky = 'w')\n",
+    "        submit_button.grid(padx = 10, pady = 10, row = 6, column = 1, sticky = 'w')\n",
     "        \n",
     "    # the submit button gets the metadata for the note and calls the MakeNote class to transform the the entered data into a new note object\n",
     "    def submit(self):\n",
@@ -312,8 +303,10 @@
     "        tag = self.note_tags.get() # extract user input from tags section\n",
     "        link = self.note_link.get() # extract user input from link section\n",
     "        meta = meta\n",
+    "        author = self.note_author.get()\n",
+    "\n",
     "        \n",
-    "        note_dict = {'title':title, 'text':text, 'link':link, 'tag':tag, 'meta':meta} # create the dictionary by creating key value pairs        \n",
+    "        note_dict = {'title':title, 'text':text, 'link':link, 'tag':tag, 'meta':meta, 'author':author} # create the dictionary by creating key value pairs        \n",
     "        make_note = MakeNote(note_dict) # pass the dictionary through to the creation of the MakeNote instance called make_note\n",
     "        self.notes.append(make_note) # append the instance of the class to the notes variable\n",
     "        self.notebook.append(make_note) # append the instance of the class to the notebook variable\n",
@@ -333,6 +326,8 @@
     "        self.note_link = note_dict['link'] # takes link from note_dict and sets it to the note_link attribute\n",
     "        self.note_tag = note_dict['tag'] # takes tag from note_dict and sets it to the note_tag attribute\n",
     "        self.note_metadata = note_dict['meta'] # takes metadata from note_dict and sets it to the note_metadata attribute\n",
+    "        self.note_author = note_dict['author']\n",
+    "\n",
     "        \n",
     "class Snippet():\n",
     "    def __init__(self, note_dict, notes, notebook):\n",
@@ -374,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "dd1811bf",
    "metadata": {},
    "outputs": [
