worked on snippet class and saving edits

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "57954c28",
    "metadata": {},
    "outputs": [],
@@ -145,6 +145,20 @@
     "        note_window = NoteForm(self, self.notebook, self.notes) # create instance of NoteForm Class\n",
     "        return None\n",
     "\n",
+    "    def clear_frame(self, target_frame):\n",
+    "        for widgets in target_frame.winfo_children():\n",
+    "            widgets.destroy()\n",
+    "    \n",
+    "    def show_notes(self):\n",
+    "        self.clear_frame(self.frame_notes)\n",
+    "        self.notes = []\n",
+    "        for note in self.notebook:\n",
+    "            new_note = MakeNote(master=self.frame_notes, note_dict=note)\n",
+    "            self.notes.apend(new_note)\n",
+    "            new_note.pack(padx=10, pady=10)\n",
+    "            new_note.config(height=3, width=40, wraplength=200, justify=tk.LEFT)\n",
+    "\n",
+    "    \n",
     "    # open_notebook method creates the notebook window\n",
     "    def open_notebook(self):\n",
     "        '''\n",
@@ -163,18 +177,6 @@
     "        \n",
     "        filepath = filedialog.askopenfilename(initialdir = os.getcwd(),\n",
     "                                              filetypes = [(\"JSON files\", \"*.json\")])\n",
-    "        # if filepath:\n",
-    "        #     with open(filepath, \"r\") as file:\n",
-    "        #         content = file.read().strip()\n",
-    "        #         notes_data = content.split('\\n\\n')\n",
-    "        #     for note_data in notes_data:\n",
-    "        #         lines = note_data.split('\\n')\n",
-    "        #         if len(lines) >= 3:\n",
-    "        #             note_dict = {\n",
-    "        #                 'title': lines[0].replace('Title:', ''),\n",
-    "        #                 'text': lines[1].replace('Text: ', ''),\n",
-    "        #                 'created': lines[2].replace('Created: ', '')\n",
-    "        #             }\n",
     "        \n",
     "        if self.notebook: # if there is a value in the self.notebook attribute this will run\n",
     "            for note in self.notebook: # iterates through each object in the self.notebook attribute\n",
@@ -195,13 +197,15 @@
     "        note_window.geometry(\"800x700\") # set dimensions \n",
     "        note_window.title(\"Note Details\") # set title\n",
     "        \n",
-    "        tk.Label(note_window, text = f\"Title: {note.note_title}\", width = 30, height = 5, wraplength = 100).pack() # presents note title to user\n",
-    "        tk.Label(note_window, text = f\"Text: {note.note_text}\", width = 80, height = 20, wraplength = 700).pack() # presents note text to user\n",
-    "        tk.Label(note_window, text = f\"Link: {note.note_link}\", width = 30, height = 5, wraplength = 200).pack() # presents note link to user\n",
-    "        tk.Label(note_window, text = f\"Tag: {note.note_tag}\", width = 30, height = 5, wraplength = 200).pack() # presents note tags to user\n",
-    "        tk.Label(note_window, text = f\"Metadata: {note.note_metadata}\", width = 30, height = 5, wraplength = 200).pack() # presents note metadata to user\n",
-    "        tk.Label(note_window, text = f\"Author: {note.note_author}\", width = 30, height = 5, wraplength = 200).pack() # presents note metadata to user\n",
-    "        tk.Button(note_window, text = \"Click to edit note\", width = 10, height = 10, command = Snippet.edit_note).pack()\n",
+    "        snippet_instance = Snippet(self.notes, self.notebook, note)\n",
+    "                \n",
+    "        tk.Label(note_window, text = f\"Title: {note.note_title}\", height = 10, wraplength = 500).grid(padx = 5, pady = 5, row = 0, column = 0) # presents note title to user\n",
+    "        tk.Label(note_window, text = f\"Text: {note.note_text}\", width=100, wraplength = 500).grid(padx = 5, pady = 5, row = 1, column = 0) # presents note text to user\n",
+    "        tk.Label(note_window, text = f\"Link: {note.note_link}\", wraplength = 500).grid(padx = 5, pady = 5, row = 2, column = 0) # presents note link to user\n",
+    "        tk.Label(note_window, text = f\"Tag: {note.note_tag}\", wraplength = 500).grid(padx = 5, pady = 5, row = 3, column = 0) # presents note tags to user\n",
+    "        tk.Label(note_window, text = f\"Metadata: {note.note_metadata}\", wraplength = 500).grid(padx = 5, pady = 5, row = 4, column = 0) # presents note metadata to user\n",
+    "        tk.Label(note_window, text = f\"Author: {note.note_author}\", wraplength = 500).grid(padx = 5, pady = 5, row = 5, column = 0) # presents note metadata to user\n",
+    "        tk.Button(note_window, text = \"Click to edit note\", bg=\"gray\", command = lambda n = note: snippet_instance.edit_note(n)).grid(padx = 5, pady = 5, row = 6, column = 0)\n",
     "\n",
     "    # this method saves the note to your computer as a txt file\n",
     "    def save_notebook(self):\n",
@@ -261,14 +265,14 @@
     "        self.tag_label = tk.Label(self, bg = 'light gray', text = 'Note tag:')\n",
     "        self.tag_label.grid(padx = 10, pady = 10, row = 3, column = 0, sticky = 'e')\n",
     "        self.note_tags = tk.Entry(self, width=80) # allows user to enter data\n",
-    "        self.note_tags.grid(padx = 10, pady = 10, row = 4, column = 1, sticky = 'w')\n",
+    "        self.note_tags.grid(padx = 10, pady = 10, row = 3, column = 1, sticky = 'w')\n",
     "        self.note_tags.insert(0, 'Enter #tags, separated by commas') # adds default text (useful during development)\n",
     "        \n",
     "        # create note link entry field\n",
     "        self.link_label = tk.Label(self, bg = 'light gray', text = 'Note link:')\n",
     "        self.link_label.grid(padx = 10, pady = 10, row = 4, column = 0, sticky = 'e')\n",
     "        self.note_link = tk.Entry(self, width = 80) # allows user to enter data\n",
-    "        self.note_link.grid(padx = 10, pady = 10, row = 3, column = 1, sticky = 'w')\n",
+    "        self.note_link.grid(padx = 10, pady = 10, row = 4, column = 1, sticky = 'w')\n",
     "        self.note_link.insert(0, 'If there is a link with this note enter it here. Else, enter \"None\"') # adds default text (useful during development)\n",
     "        \n",
     "        self.author_label = tk.Label(self, bg = 'light gray', text = 'Author:')\n",
@@ -330,25 +334,94 @@
     "\n",
     "        \n",
     "class Snippet():\n",
-    "    def __init__(self, note_dict, notes, notebook):\n",
-    "        self.note_text = note_dict[\"text\"] # pass note dict\n",
+    "    def __init__(self, notes, notebook, note):\n",
     "        self.notes = notes # pass through notes variable\n",
-    "        self.notebook = notebook # pass through note book variable \n",
+    "        self.notebook = notebook # pass through note book variable\n",
+    "        # self.note_text = self.note_text.get('1.0', 'end').strip('\\n') # extract user input from text section\n",
+    "        self.note = note\n",
     "        \n",
-    "    def edit_note():\n",
+    "    def submit_edit(self, note):\n",
+    "        created = datetime.datetime.now() # get current dat and time\n",
+    "        local_now = created.astimezone() # shows the local time and the GMT offset\n",
+    "        local_tz = local_now.tzinfo # sets timezone \n",
+    "        meta = f'edited: {created}, {local_tz}' # turns metadata into a string\n",
+    "        \n",
+    "        # get user input\n",
+    "        title = self.edit_title.get() # extract user input from title section\n",
+    "        text = self.edit_text.get('1.0', 'end').strip('\\n') # extract user input from text section\n",
+    "        tag = self.edit_tags.get() # extract user input from tags section\n",
+    "        link = self.edit_link.get() # extract user input from link section\n",
+    "        meta = meta\n",
+    "        author = self.edit_author.get()\n",
+    "\n",
+    "        note_dict = {'title':title, 'text':text, 'link':link, 'tag':tag, 'meta':meta, 'author':author} # create the dictionary by creating key value pairs        \n",
+    "        make_note = MakeNote(note_dict) # pass the dictionary through to the creation of the MakeNote instance called make_note\n",
+    "        self.notes.append(make_note) # append the instance of the class to the notes variable\n",
+    "        self.notebook.append(make_note) # append the instance of the class to the notebook variable\n",
+    "        \n",
+    "        file = filedialog.asksaveasfile(initialdir = 'C:/Users/theno/Documents/UMD SOPHOMORE/S2/INST 326/Group Project',\n",
+    "                                          defaultextension = \".json\", \n",
+    "                                          filetypes = [(\"JSON files\", \"*.json\"),\n",
+    "                                         (\"all files\", \".*\")]) # gets the working directory where files will be saved, *** may need to be changed depending on the computer that this program is being run on         \n",
+    "\n",
+    "        first_note = self.notes[0]\n",
+    "        note_dict = {'title':first_note.note_title, 'text':first_note.note_text, 'link':first_note.note_link, 'tag':first_note.note_tag, 'meta':first_note.note_metadata} \n",
+    "        \n",
+    "        json_out = json.dumps(note_dict)\n",
+    "        file.write(json_out)\n",
+    "        self.notes = [] # Setting self.notes to empty allows the index to always be \n",
+    "                \n",
+    "        return note_dict # returns note_dict variable which is the dictionary\n",
+    "\n",
+    "        \n",
+    "    def edit_note(self, note):\n",
     "        edit_window = tk.Toplevel()\n",
     "        edit_window.geometry(\"800x700\")\n",
     "        edit_window.title(\"Edit Snippet\")\n",
     "        \n",
-    "        edit_label = tk.Label(edit_window, bg= \"light gray\", text = \"Note text:\")\n",
-    "        edit_label.grid(padx = 10, pady = 10, row = 2, column = 0, sticky = \"e\")\n",
-    "        edit_text = tk.Text(edit_window, height = 10, width = 60)\n",
-    "        edit_text.grid(padx = 10, pady = 10, row = 2 , column = 1)\n",
-    "        edit_text.insert(\"1.0\", \"type to edit note\")\n",
-    "        \n",
+    "        self.edit_text_label = tk.Label(edit_window, bg= \"light gray\", text = \"Note text:\")\n",
+    "        self.edit_text_label.grid(padx = 10, pady = 10, row = 2, column = 0, sticky = \"e\")\n",
+    "        self.edit_text = tk.Text(edit_window, height = 10, width = 60)\n",
+    "        self.edit_text.grid(padx = 10, pady = 10, row = 2 , column = 1)\n",
+    "        self.edit_text.insert(\"1.0\", note.note_text)\n",
     "\n",
-    "        edit_submit_button = tk.Button(edit_window, bg= \"light gray\", text = \"Submit Edit:\")\n",
-    "        edit_submit_button.grid(padx = 10, pady = 10, row = 5, column = 0, sticky = \"e\")        \n",
+    "        \n",
+    "                # create note title entry field\n",
+    "        self.edit_title_label = tk.Label(edit_window, bg = 'light gray', text = 'Note Title:')\n",
+    "        self.edit_title_label.grid(padx = 10, pady = 10, row = 1, column = 0, sticky = 'e')\n",
+    "        self.edit_title = tk.Entry(edit_window, width = 80) # allows user to enter data\n",
+    "        self.edit_title.grid(padx = 10, pady = 10, row = 1, column = 1, sticky = 'w')\n",
+    "        self.edit_title.insert(0, note.note_title) # adds default text (useful during development)\n",
+    "        \n",
+    "        # create note tags entry field\n",
+    "        self.edit_tag_label = tk.Label(edit_window, bg = 'light gray', text = 'Note tag:')\n",
+    "        self.edit_tag_label.grid(padx = 10, pady = 10, row = 3, column = 0, sticky = 'e')\n",
+    "        self.edit_tags = tk.Entry(edit_window, width=80) # allows user to enter data\n",
+    "        self.edit_tags.grid(padx = 10, pady = 10, row = 4, column = 1, sticky = 'w')\n",
+    "        self.edit_tags.insert(0, note.note_tag) # adds default text (useful during development)\n",
+    "        \n",
+    "        # create note link entry field\n",
+    "        self.edit_link_label = tk.Label(edit_window, bg = 'light gray', text = 'Note link:')\n",
+    "        self.edit_link_label.grid(padx = 10, pady = 10, row = 4, column = 0, sticky = 'e')\n",
+    "        self.edit_link = tk.Entry(edit_window, width = 80) # allows user to enter data\n",
+    "        self.edit_link.grid(padx = 10, pady = 10, row = 3, column = 1, sticky = 'w')\n",
+    "        self.edit_link.insert(0, note.note_link) # adds default text (useful during development)\n",
+    "        \n",
+    "        self.edit_author_label = tk.Label(edit_window, bg = 'light gray', text = 'Author:')\n",
+    "        self.edit_author_label.grid(padx = 10, pady = 10, row = 5, column = 0, sticky = 'e')\n",
+    "        self.edit_author = tk.Entry(edit_window, width = 60) # allows user to enter data\n",
+    "        self.edit_author.grid(padx = 10, pady = 10, row = 5, column = 1)\n",
+    "        self.edit_author.insert('0', note.note_author) # adds default text (useful during development\n",
+    "        \n",
+    "        # Create new note form and get the variables into each entry window \n",
+    "        # save back to original file \n",
+    "\n",
+    "        self.edit_submit_button = tk.Button(edit_window, bg= \"light gray\", text = \"Submit Edit:\", command= lambda n = note: self.submit_edit(n)) \n",
+    "        self.edit_submit_button.grid(padx = 10, pady = 10, row = 6, column = 0, sticky = \"e\")\n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "         \n",
     "    \n",
     "# main execution\n",
     "\n",
@@ -364,12 +437,13 @@
    "id": "c50d5149",
    "metadata": {},
    "source": [
+    "\n",
     "#### Print your three notes below"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "dd1811bf",
    "metadata": {},
    "outputs": [
