making final edits

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -76,7 +76,29 @@
    "execution_count": 1,
    "id": "57954c28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-21 16:21:22.123 python[10756:11819909] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-21 16:21:26.957 python[10756:11819909] +[CATransaction synchronize] called within transaction\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/Caskroom/miniconda/base/lib/python3.11/tkinter/__init__.py\", line 1948, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"/var/folders/ll/q3mkxzb114d_9jy0_83__xy00000gn/T/ipykernel_10756/3503998052.py\", line 339, in <lambda>\n",
+      "    self.edit_submit_button = tk.Button(edit_window, bg= \"light gray\", text = \"Submit Edit:\", command= lambda n = note: self.submit_edit(n))\n",
+      "                                                                                                                       ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/var/folders/ll/q3mkxzb114d_9jy0_83__xy00000gn/T/ipykernel_10756/3503998052.py\", line 290, in submit_edit\n",
+      "    file.write(json_out)\n",
+      "    ^^^^^^^^^^\n",
+      "AttributeError: 'NoneType' object has no attribute 'write'\n",
+      "2024-04-21 16:21:32.959 python[10756:11819909] +[CATransaction synchronize] called within transaction\n"
+     ]
+    }
+   ],
    "source": [
     "# Lab 6: Noah Lee, testing if the commit works!\n",
     "\n",
@@ -117,8 +139,8 @@
     "    def __init__(self):  #initialize the main window\n",
     "        super().__init__() # initialize it as a tkinter window\n",
     "        \n",
-    "        self.geometry(\"600x400\") # set the default window size\n",
-    "        self.title('Notebook') #set the default window title\n",
+    "        self.geometry(\"600x700\") # set the default window size\n",
+    "        self.title('Main Window') #set the default window title\n",
     "        self.notebook = [] # initialize an attribute named 'notebook' as an empty list\n",
     "        self.notes = [] # initialize an attribute named 'notebook' as an empty list\n",
     "\n",
@@ -171,13 +193,12 @@
     "        # edit code so that when you open notebook, it opens the working directory\n",
     "    \n",
     "        new_window = tk.Toplevel(self) # create top level window\n",
-    "        new_window.geometry(\"600x400\") # set dimensions\n",
-    "        new_window.title(\"Notes\") # title of window\n",
-    "        tk.Label(new_window, text = \"Click on the notes to get more details\").pack() # gives the user instructions\n",
+    "        new_window.geometry(\"800x800\") # set dimensions\n",
+    "        new_window.title(\"Notebook\") # title of window\n",
+    "        tk.Label(new_window, text = \"Click on the notes to get more details and to edit the notes!\").pack() # gives the user instructions\n",
     "        \n",
     "        filepath = filedialog.askopenfilename(initialdir = os.getcwd(),\n",
     "                                              filetypes = [(\"JSON files\", \"*.json\")])\n",
-    "        \n",
     "        if self.notebook: # if there is a value in the self.notebook attribute this will run\n",
     "            for note in self.notebook: # iterates through each object in the self.notebook attribute\n",
     "                tk.Button(new_window, text = f\"Title: {note.note_title} \", width = 20, height = 5, command = lambda n = note: self.display_whole_note(n)).pack() # when clicked, this button represents the whole note by running the display_whole_note method\n",
@@ -364,19 +385,20 @@
     "                                          filetypes = [(\"JSON files\", \"*.json\"),\n",
     "                                         (\"all files\", \".*\")]) # gets the working directory where files will be saved, *** may need to be changed depending on the computer that this program is being run on         \n",
     "\n",
-    "        first_note = self.notes[0]\n",
-    "        note_dict = {'title':first_note.note_title, 'text':first_note.note_text, 'link':first_note.note_link, 'tag':first_note.note_tag, 'meta':first_note.note_metadata} \n",
+    "        #first_note = self.notes[0]\n",
+    "        #note_dict = {'title':first_note.note_title, 'text':first_note.note_text, 'link':first_note.note_link, 'tag':first_note.note_tag, 'meta':first_note.note_metadata} \n",
     "        \n",
     "        json_out = json.dumps(note_dict)\n",
     "        file.write(json_out)\n",
-    "        self.notes = [] # Setting self.notes to empty allows the index to always be \n",
-    "                \n",
+    "    \n",
+    "        \n",
+    "        #self.notes = [] # Setting self.notes to empty allows the index to always be \n",
     "        return note_dict # returns note_dict variable which is the dictionary\n",
     "\n",
     "        \n",
     "    def edit_note(self, note):\n",
     "        edit_window = tk.Toplevel()\n",
-    "        edit_window.geometry(\"800x700\")\n",
+    "        edit_window.geometry(\"900x900\")\n",
     "        edit_window.title(\"Edit Snippet\")\n",
     "        \n",
     "        self.edit_text_label = tk.Label(edit_window, bg= \"light gray\", text = \"Note text:\")\n",
@@ -385,8 +407,8 @@
     "        self.edit_text.grid(padx = 10, pady = 10, row = 2 , column = 1)\n",
     "        self.edit_text.insert(\"1.0\", note.note_text)\n",
     "\n",
-    "        \n",
-    "                # create note title entry field\n",
+    "    \n",
+    "        # create note title entry field\n",
     "        self.edit_title_label = tk.Label(edit_window, bg = 'light gray', text = 'Note Title:')\n",
     "        self.edit_title_label.grid(padx = 10, pady = 10, row = 1, column = 0, sticky = 'e')\n",
     "        self.edit_title = tk.Entry(edit_window, width = 80) # allows user to enter data\n",
@@ -418,6 +440,11 @@
     "\n",
     "        self.edit_submit_button = tk.Button(edit_window, bg= \"light gray\", text = \"Submit Edit:\", command= lambda n = note: self.submit_edit(n)) \n",
     "        self.edit_submit_button.grid(padx = 10, pady = 10, row = 6, column = 0, sticky = \"e\")\n",
+    "        \n",
+    "        self.user_label = tk.Label(edit_window, bg = 'light gray', text = 'To see your edited and original notes, you must close and reopen the notebook')\n",
+    "        self.user_label.grid(padx = 10, pady = 10, row = 7, column = 1, sticky = 'e')\n",
+    "        \n",
+    "        \n",
     "    \n",
     "    \n",
     "        \n",
